# macro-recorder

./: Cargo.toml  fluffy-macro-recorder-settings.txt
src/: action_list_category.rs  actions.rs  gui.rs  hotkeys.rs  keycodes_to_string.rs  lib.rs  main.rs  modify_command_window.rs  recorder.rs  right_click_dialog.rs  settings.rs  settings_window.rs  warning_window.rs
src/gui/: app.rs  mod.rs  side_panel.rs  top_panel.rs
src/image/: image_capture_overlay.rs  mod.rs
src/images/: image_capture_overlay.rs  mod.rs
src/modals/: action_list_category.rs  hotkeys_window.rs  mod.rs  settings_window.rs  warning_window.rs
src/modals/modify_command_window/: delay_modify_command_window.rs  image_modify_command_window.rs  keyboard_command_window.rs  mod.rs  mouse_modify_command_window.rs  pixel_modify_command_window.rs  play_modify_command_window.rs  repeat_modify_command_window.rs
src/modify_command_window/: delay_modify_command_window.rs  keyboard_command_window.rs  mod.rs  mouse_modify_command_window.rs  wait_for_image_modify_command_window.rs
