[package]
name = "macro_recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
chrono = "0.4.19"
serde_json  = "1.0.82"
serde = { version = "1.0.140", features = ["derive"]}  
eframe = "0.18.0"