[package]
name = "macro_recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "sysinfoapi"] }
chrono = "0.4.19"
serde_json  = "1.0.82"
serde = { version = "1.0.140", features = ["derive"]}  
egui = { git = "https://github.com/emilk/egui"}
eframe = { git = "https://github.com/emilk/egui"}
rfd = "0.10.0"
strum = "0.24.1"
strum_macros = "0.24.3"