[package]
name = "macro_recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "sysinfoapi"] }
chrono = "0.4.19"
serde_json  = "1.0.82"
serde = { version = "1.0.140", features = ["derive"]}  
egui = "0.19.0"
eframe = "0.19.0"
rfd = "0.10.0"
strum = "0.24.1"
strum_macros = "0.24.3"
lazy_static = "1.4.0"
itertools = "0.10.3"
bytemuck = "1.12.1"
winit_input_helper = "0.13.0"
glium = "0.32.1"
winit = "0.27.2"
image = "0.24.3"
rayon = "1.5.3"
once_cell = "1.15.0"
imageproc = "0.23.0"